--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.74.3",
     "react-native-bootsplash": "^6.1.2",
     "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.9",
